# Resume-Skill-Builder

./: .gitignore  README.md  index.html  package-lock.json  package.json  sprint0.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ai-code-review.yml  ci.yml  deploy-staging.yml  reusable-backend-ci.yml  reusable-frontend-ci.yml  reusable-staging-deploy.yml  security.yml
backend/: pyproject.toml
backend/data/: sanity_skillpulse.db
backend/docs/: BACKEND_WORKFLOW.md  JSON_CONTRACT.md
backend/docs/examples/: skill_insights_response.example.json
backend/docs/schemas/: ingest_query.schema.json  job_posting.schema.json  skill_insights_response.schema.json
backend/scripts/: extract_skills.py  ingest.py  inspect_db.py  run_backend.py  skill_insights.py
backend/src/skillpulse_ingest/: __init__.py  models.py  pipeline.py  role_match.py  runtime_paths.py  skill_aggregate.py  skill_extract.py  skills_catalog.py  storage_sqlite.py  workflow.py
backend/src/skillpulse_ingest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/skillpulse_ingest/sources/: __init__.py  arbeitnow.py  base.py  remotive.py  theirstack.py
backend/tests/: test_integration_theirstack_live.py  test_models.py  test_pipeline.py  test_role_match.py  test_run_backend_script.py  test_script_defaults.py  test_scripts_ingest.py  test_skill_aggregate.py  test_skill_extract.py  test_sources_base.py  test_sources_remotive.py  test_sources_theirstack.py  test_storage_sqlite.py
docs/: CI_CD.md  PROJECT_WORKFLOW.md
src/: App.jsx
src/components/: TopNav.jsx
(+5 files in other folders)
